--- a/css/styles.css
+++ b/css/styles.css
@@ -14,14 +14,16 @@ body{
 	height: 24px;
 	cursor: pointer;
 	transition: .15s;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 1px solid #000;
 }
 .hamburger-box:hover{
 	opacity: .7;
 }
 .hamburger{
 	position: relative;
-	top: 50%;
-	transform: translateY(-50%);
 }
 .hamburger:before,
 .hamburger:after{
@@ -44,7 +46,7 @@ body{
 	top: 10px;
 }
 .hamburger-box.active .hamburger{
-	transform: translateY(-50%) rotate(-180deg);
+	transform: rotate(-180deg);
 }
 .hamburger-box.active .hamburger:before{
 	transform:  translateX(8px) rotate(45deg) scaleX(.7);
