--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@ body{
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	user-select: none;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .hamburger-box:hover{
 	opacity: .7;
